--- a/MasterPage.master
+++ b/MasterPage.master
@@ -361,7 +361,8 @@
 <script src='js/script.js'></script>
 
   <script src="http://xa.xnet.world/track/ua.js"></script>
-    <script>ua("5234239106","152342391060",'','nationpaper','12118');</script>
+    <script>ua("5234239106","emba",'','nationpaper','12118');</script>
+
     </form>
 </body>
 </html>
