--- a/MasterPage.master
+++ b/MasterPage.master
@@ -14,7 +14,7 @@
 <meta name="description" content="" />
 <meta property="og:title" content="" />
 <meta property="og:description" content="" />
-<meta property="og:site_name" content="" />
+<meta property="og:site_name" content="藝時代 Cultural Launch" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="" />
 <meta property="og:image" content="" />
@@ -34,6 +34,7 @@
 <link rel="stylesheet" href='css/style.css' />
 <link rel="shortcut icon" href="favicon.ico" />
 <!--[if lt IE 9]><script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+ <script src="/js/jquery-1.9.1.min.js"></script>
      <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -351,7 +352,7 @@
 
     </div><!-- wrapper END -->
 
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src='js/device.js'></script>
@@ -359,9 +360,55 @@
 <script src="assets/swipe/swiper.min.js"></script>
 <script src="assets/magnific/jquery.magnific-popup.min.js"></script>
 <script src='js/script.js'></script>
+        <script>
+    function getParameterByName(name, url) {
+        if (!url) url = window.location.href;
+        name = name.replace(/[\[\]]/g, "\\$&");
+        var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+            results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+        jQuery.postJSON = function (url, para, contentType, callback) {
+            if (contentType == null || contentType == '') contentType = "text/xml";
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: para,
+                dataType: "json",
+                contentType: contentType,
+                async: false,
+                cache: false,
+                success: function (data) { callback(data); },
+                error: function (xhr, error) { callback(''); }
+            });
+        };
+        jQuery.post = function (url, para, callback) {
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: para,
+                dataType: "text",
+                async: false,
+                cache: false,
+                success: function (data) { callback(data); },
+                error: function (xhr, error) { callback(''); }
+            });
+        };
 
+      
+   
+
+     
+ 
+    
+      
+
+   
+    </script>
   <script src="http://xa.xnet.world/track/ua.js"></script>
-    <script>ua("5234239106","emba",'','nationpaper','12118');</script>
+    <script>//ua("5234239106","emba",'','nationpaper','12118');</script>
 
     </form>
 </body>
