--- a/MasterPage.master
+++ b/MasterPage.master
@@ -25,14 +25,14 @@
 <meta name="robots" content="noindex,nofollow" />
 <title>首頁│藝時代 Cultural Launch</title>
 
-<link rel="stylesheet" href='assets/font-awesome/css/font-awesome.min.css' />
-<link rel="stylesheet" href='assets/bootstrap/css/bootstrap.min.css' />
-<link rel="stylesheet" href='css/reset.css' />
-<link rel="stylesheet" href='assets/swipe/swiper.min.css'/>
-<link rel="stylesheet" href='css/theme.css' />
-<link rel="stylesheet" href='css/post-layout.css' />
-<link rel="stylesheet" href='css/style.css' />
-<link rel="shortcut icon" href="favicon.ico" />
+<link rel="stylesheet" href='/assets/font-awesome/css/font-awesome.min.css' />
+<link rel="stylesheet" href='/assets/bootstrap/css/bootstrap.min.css' />
+<link rel="stylesheet" href='/css/reset.css' />
+<link rel="stylesheet" href='/assets/swipe/swiper.min.css'/>
+<link rel="stylesheet" href='/css/theme.css' />
+<link rel="stylesheet" href='/css/post-layout.css' />
+<link rel="stylesheet" href='/css/style.css' />
+<link rel="shortcut icon" href="/favicon.ico" />
 <!--[if lt IE 9]><script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
  <script src="/js/jquery-1.9.1.min.js"></script>
      <asp:ContentPlaceHolder id="head" runat="server">
@@ -354,12 +354,12 @@
 
 
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src='js/device.js'></script>
-<script src='js/theme.js'></script>
-<script src="assets/swipe/swiper.min.js"></script>
-<script src="assets/magnific/jquery.magnific-popup.min.js"></script>
-<script src='js/script.js'></script>
+<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src='/js/device.js'></script>
+<script src='/js/theme.js'></script>
+<script src="/assets/swipe/swiper.min.js"></script>
+<script src="/assets/magnific/jquery.magnific-popup.min.js"></script>
+<script src='/js/script.js'></script>
         <script>
     function getParameterByName(name, url) {
         if (!url) url = window.location.href;
