--- a/MasterPage.master
+++ b/MasterPage.master
@@ -38,6 +38,7 @@
  <script src="/js/jquery-1.9.1.min.js"></script>
      <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    
 </head>
 <body class="list">
     <form id="form1" runat="server">
@@ -205,7 +206,7 @@
                 </div><!-- top-bar END -->
 
                 <!-- logo center -->
-                <div class="logo">
+                <div class="logo <%=logo %>">
                     <a href="/index" title="藝時代 Cultural Launch">
                         <span class="visual-hidden">藝時代 Cultural Launch</span>
                     </a>
@@ -338,11 +339,11 @@
 
                             <div class="col-md-12 sub-footer-menu">
                                 <ul class="nav nav-pills">
-                                    <li><a href="#">關於我們</a></li>
-                                    <li><a href="#">廣告刊登</a></li>
-                                    <li><a href="#">版權聲明</a></li>
-                                    <li><a href="#">網站導覽</a></li>
-                                    <li><a href="#">聯絡我們</a></li>
+                                    <li><a href="/AboutUs">關於我們</a></li>
+                                    <li><a href="/Advertisement ">廣告刊登</a></li>
+                                    <li><a href="/Copyright">版權聲明</a></li>
+                                    <li><a href="/SiteMap">網站導覽</a></li>
+                                    <li><a href="/ContactUs">聯絡我們</a></li>
                                 </ul>
                             </div><!-- col-md-12 END -->
 
