--- a/MasterPage.master
+++ b/MasterPage.master
@@ -234,21 +234,21 @@
 
                             <div class="main-menu">
                                 <ul class="sf-menu">
-                                    <li class="menu-item sf-dropdown"><a href="/1/catalog">最新消息</a>
+                                    <li class="menu-item sf-dropdown<%=active[1] %>"><a href="/1/catalog">最新消息</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="/7/catalog">產業動態</a></li>
                                             <li class="menu-item"><a href="/8/catalog">文化政策</a></li>
                                             <li class="menu-item"><a href="/9/catalog">民間文藝</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item sf-dropdown"><a href="/2/catalog">活動</a>
+                                    <li class="menu-item sf-dropdown<%=active[2] %>"><a href="/2/catalog">活動</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="/10/catalog">展覽</a></li>
                                             <li class="menu-item"><a href="/11/catalog">表演</a></li>
                                             <li class="menu-item"><a href="/12/catalog">體驗</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item sf-dropdown"><a href="/3/catalog">藝MBA</a>
+                                    <li class="menu-item sf-dropdown<%=active[3] %>"><a href="/3/catalog">藝MBA</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="/13/catalog">產業經營</a></li>
                                             <li class="menu-item"><a href="/14/catalog">設計</a></li>
@@ -256,8 +256,9 @@
                                             <li class="menu-item"><a href="/16/catalog">在地創生</a></li>
                                         </ul>
                                     </li>
-                                    <li class="menu-item"><a href="/4/catalog">專題報導</a></li>
-                                    <li class="menu-item"><a href="/5/catalog">人物</a></li><li class="menu-item sf-dropdown"><a href="/6/catalog">跨界媒合</a>
+                                    <li class="menu-itemn<%=active[4] %>"><a href="/4/catalog">專題報導</a></li>
+                                    <li class="menu-itemn<%=active[5] %>"><a href="/5/catalog">人物</a></li>
+                                    <li class="menu-item sf-dropdown<%=active[6] %>"><a href="/6/catalog">跨界媒合</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="/17/catalog">文創人才</a></li>
                                             <li class="menu-item"><a href="/18/catalog">群眾募資</a></li>
