--- a/MasterPage.master
+++ b/MasterPage.master
@@ -407,15 +407,39 @@
             });
         };
 
-      
    
+    </script>
+               <script>
+           
+        $(document).ready(function () {     
+            var dataValue = {"kind":"list"};             
+            $.post('/hot_list', dataValue, function (result) { $("#hot_list").html(result); });
+            dataValue = {"classid":"2"};             
+            $.post('/AdBanner', dataValue, function (result) { $("#ad_banner1").html(result); });
+            $.post('/AdBanner', dataValue, function (result) { $("#ad_banner2").html(result); });
+              //分享至臉書
+	        $("a.btn-share.facebook").click(function () {
+	        window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)), "_blank", "toolbar=yes,location=yes, directories=no, status=no,menubar=yes,scrollbars=yes,esizable=no, copyhistory=yes, width=600,  height=400")
+            })
+            $("a.btn-share.twitter").click(function () {
+                text=   $(document).find("title").text();
+	            window.open('http://twitter.com/share?text='+ text +'&url='.concat(encodeURIComponent(location.href)), "_blank", "toolbar=yes,location=yes, directories=no, status=no,menubar=yes,scrollbars=yes,esizable=no, copyhistory=yes, width=600,  height=400")
+            })
+            $("a.btn-share.google").click(function () {
+	            window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), "_blank", "toolbar=yes,location=yes, directories=no, status=no,menubar=yes,scrollbars=yes,esizable=no, copyhistory=yes, width=600,  height=400")
+            })
 
-     
- 
+            $("a.btn-share.pinterest").click(function () {
+                text=   $(document).find("title").text();
+	            window.open('http://pinterest.com/pin/create/button/?description='+ text + '&url='.concat(encodeURIComponent(location.href)), "_blank", "toolbar=yes,location=yes, directories=no, status=no,menubar=yes,scrollbars=yes,esizable=no, copyhistory=yes, width=600,  height=400")
+            })
+
+          
+
+
+    });
     
-      
 
-   
     </script>
   <script src="http://xa.xnet.world/track/ua.js"></script>
     <script>//ua("5234239106","emba",'','nationpaper','12118');</script>
