--- a/spadmin/admin.master
+++ b/spadmin/admin.master
@@ -43,12 +43,14 @@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     
     <script>
-        jQuery.postJSON = function (url, para, callback) {
+        jQuery.postJSON = function (url, para, contentType, callback) {
+            if (contentType == null || contentType == '') contentType = "text/xml";
             $.ajax({
                 type: 'POST',
                 url: url,
                 data: para,
                 dataType: "json",
+                contentType: contentType,
                 async: false,
                 cache: false,
                 success: function (data) { callback(data); },
@@ -67,6 +69,30 @@
                 error: function (xhr, error) { callback(''); }
             });
         };
+        function check_cbx(obj, val) {//check checkbox item ,設定勾選
+            var s = "";          
+            if (obj != undefined) {
+                if (obj.length == 1) {
+                    if (obj == val) s = " checked ";
+                }
+                else if (obj.length > 1) {
+                    for (ix = 0; ix < obj.length; ix++) {
+                        if (obj[ix] == val) s = " checked ";
+                    }
+                }
+            }
+           
+            return s;
+        }
+        function ret() {  //返回上層    
+            if (flag != 'Y') {
+                if (confirm('你確定嗎?'))  {
+                    parent.$.fn.colorbox.close();
+                }
+            }
+            else
+                 parent.$.fn.colorbox.close();
+        }
     </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -280,13 +306,10 @@
 		<script src="assets/js/typeahead-bs2.min.js"></script>
 
 		<!-- page specific plugin scripts -->
-
-
 		<script src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
 		<script src="assets/js/jquery.ui.touch-punch.min.js"></script>
 		<script src="assets/js/chosen.jquery.min.js"></script>
-		<script src="assets/js/fuelux/fuelux.spinner.min.js"></script>
-		<!--
+		<script src="assets/js/fuelux/fuelux.spinner.min.js"></script>		<!--
             <script src="assets/js/date-time/bootstrap-datepicker.min.js"></script>
 		 -->
         <script src="assets/js/date-time/bootstrap-timepicker.min.js"></script>       
@@ -372,14 +395,7 @@
 		<script src="assets/js/jquery.colorbox-min.js"></script>
         <script>
         $(document).ready(function(){
-				//Examples of how to assign the Colorbox event to elements
-				$(".group1").colorbox({rel:'group1'});
-				$(".group2").colorbox({rel:'group2', transition:"fade"});
-				$(".group3").colorbox({rel:'group3', transition:"none", width:"75%", height:"75%"});
-				$(".group4").colorbox({rel:'group4', slideshow:true});
-				$(".ajax").colorbox();
-				$(".youtube").colorbox({iframe:true, innerWidth:640, innerHeight:390});
-				$(".vimeo").colorbox({iframe:true, innerWidth:500, innerHeight:409});
+			
 				$(".iframe").colorbox({iframe:true, width:"100%", height:"100%"});
 				
 				$(".callbacks").colorbox({
@@ -390,14 +406,7 @@
 					onClosed:function(){ alert('onClosed: colorbox has completely closed'); }
 				});
 
-				$('.non-retina').colorbox({rel:'group5', transition:'none'})
-				$('.retina').colorbox({rel:'group5', transition:'none', retinaImage:true, retinaUrl:true});
-				
-				//Example of preserving a JavaScript event for inline calls.
-				$("#click").click(function(){ 
-					$('#click').css({"background-color":"#f00", "color":"#fff", "cursor":"inherit"}).text("Open this window again and this message will still be here.");
-					return false;
-				});
+		
 			});
 		</script>
     </form>
